# rtiroutingservice-plugins

./: .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  THIRD-PARTY-NOTICES.md
examples/mqtt-shapes/: CMakeLists.txt  Makefile  README.md  config.example.mk
examples/mqtt-shapes/etc/: shapes_agent_profiles.xml  shapes_bridge.xml  shapes_bridge_arduino.xml  shapes_bridge_cloud.xml  shapes_bridge_full.xml  shapes_bridge_map.xml  shapes_demo_workspace.xml
examples/mqtt-shapes/src/shapes-agent/: ShapesAgentDds.c  ShapesAgentDds.h  ShapesAgentDdsPublisher.c  ShapesAgentDdsSubscriber.c  main.c
helpers/plugin-build-helper/: .gitmodules  CMakeLists.txt
helpers/plugin-build-helper/cmake/: rtiroutingservice_plugin.cmake  rtiroutingservice_plugin_bootstrap.cmake  rtiroutingservice_plugin_docs.cmake  rtiroutingservice_plugin_example.cmake  rtiroutingservice_plugin_helpers.cmake  rtiroutingservice_plugin_idl.cmake  rtiroutingservice_plugin_library.cmake  rtiroutingservice_plugin_test.cmake
helpers/plugin-build-helper/make/: .gitignore  config.example.mk  gitignore.example  rtiroutingservice_plugin_env.mk  rtiroutingservice_plugin_targets.mk
helpers/plugin-install-tester/test/: clone_and_build.sh  test_config.sh  test_helpers.sh
plugins/adapters/file/: CMakeLists.txt  Makefile  README.md
plugins/adapters/file/example/: CMakeLists.txt  Square.txt  file_adapter_config.xml
plugins/adapters/file/include/rti/: rtiadapt_file.h
plugins/adapters/file/src/: FileAdapter.c  LineConversion.c  LineConversion.h
plugins/adapters/mqtt/: CMakeLists.txt  Makefile  README.md
plugins/adapters/mqtt/doc/: CMakeLists.txt  building.rst  conf.py  configuration.rst  installation.rst  release_notes.rst  vars.rst
plugins/adapters/mqtt/example/: CMakeLists.txt
plugins/adapters/mqtt/example/mqtt-agent/: CMakeLists.txt
plugins/adapters/mqtt/example/mqtt-agent/etc/: mqtt_agent_profiles.xml  mqtt_data_bridge.xml
plugins/adapters/mqtt/example/mqtt-agent/src/: MqttAgent.c  MqttAgent.h  MqttAgentPublisher.c  MqttAgentSubscriber.c  main.c
plugins/adapters/mqtt/idl/: rtiadapt_mqtt_types.idl  rtiadapt_mqtt_types_adapter.idl  rtiadapt_mqtt_types_client.idl  rtiadapt_mqtt_types_message.idl
plugins/adapters/mqtt/include/rti/: rtiadapt_mqtt.h  rtiadapt_mqtt_adapter.h  rtiadapt_mqtt_client.h  rtiadapt_mqtt_log.h  rtiadapt_mqtt_log_messages.h
plugins/adapters/mqtt/src/adapter/: BrokerConnection.c  BrokerConnection.h  MessageReader.c  MessageReader.h  MessageWriter.c  MessageWriter.h  Plugin.c  Plugin.h  Properties.c  Properties.h
plugins/adapters/mqtt/src/mqtt/: Client.c  Client.h  ClientApi.h  ClientApiPaho.c  ClientApiPaho.h  Infrastructure.c  Infrastructure.h  Message.c  Message.h  Publication.c  Publication.h  Subscription.c  Subscription.h
plugins/adapters/mqtt/test/: CMakeLists.txt
plugins/adapters/mqtt/test/common/: TestFramework.c  TestFramework.h
plugins/adapters/mqtt/test/mqtt/: CMakeLists.txt
plugins/adapters/mqtt/test/mqtt/client/: CMakeLists.txt  ClientTester.c  ClientWrap.c  ClientWrap.h
plugins/adapters/mqtt/test/mqtt/infrastructure/: CMakeLists.txt  ConfigTester.c  ConfigTester.h  InfrastructureTester.c  InfrastructureTester.h  TopicFilterTester.c  TopicFilterTester.h
plugins/processors/fwd/: CMakeLists.txt  Makefile  README.md
plugins/processors/fwd/idl/: rtiprocess_fwd_types.idl
plugins/processors/fwd/include/rti/: rtiprocess_fwd.hpp  rtiprocess_fwd_log.hpp  rtiprocess_fwd_platform.hpp  rtiprocess_fwd_properties.hpp
plugins/processors/fwd/src/: ByInputNameForwardingEngine.cxx  ByInputValueForwardingEngine.cxx  ForwardingEngine.cxx  Properties.cxx
plugins/transformations/field/: CMakeLists.txt  Makefile  README.md
plugins/transformations/field/doc/: CMakeLists.txt  building.rst  conf.py
plugins/transformations/field/idl/: rtitransform_field_types.idl
plugins/transformations/field/include/rti/: rtitransform_field.h  rtitransform_field_primitive.h
plugins/transformations/field/src/common/: Infrastructure.c  Infrastructure.h
plugins/transformations/field/src/primitive/: PrimitiveFieldTransformation.c
plugins/transformations/json/: CMakeLists.txt  Makefile  README.md
plugins/transformations/json/doc/: conf.py  configuration.rst  copyright.rst  extlinks.py  installation.rst  introduction.rst
plugins/transformations/json/idl/: rtitransform_json_types.idl
plugins/transformations/json/include/rti/: rtitransform_json.h  rtitransform_json_flat.h
plugins/transformations/json/src/flat/: FlatTypeTransformation.c
plugins/transformations/simple/: CMakeLists.txt  Makefile  README.md
plugins/transformations/simple/doc/: conf.py  index.rst  modules.rst  vars.rst
plugins/transformations/simple/idl/: rtitransform_simple_types.idl
plugins/transformations/simple/include/rti/: rtitransform_simple.h  rtitransform_simple_log.h  rtitransform_simple_noop.h  rtitransform_simple_platform.h  rtitransform_simple_tmplt_declare.h  rtitransform_simple_tmplt_define.h
plugins/transformations/simple/src/common/: Infrastructure.c  Infrastructure.h  Transformation.c  Transformation.h  TransformationPlugin.c  TransformationPlugin.h  UserPlugin.c  UserPlugin.h
plugins/transformations/simple/src/noop/: NoopTransformation.c
plugins/transformations/simple/test/: CMakeLists.txt
plugins/transformations/simple/test/common/: TestFramework.c  TestFramework.h
plugins/transformations/simple/test/transform/: CMakeLists.txt  TransformTester.c  TransformTester.h
